[package]
name = "redis"
version = "0.1.0"
edition = "2024"
build = "src/build.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
mio = { version = "1.2.0", features = ["net", "os-poll"] }
slab = "0.4.12"
indexmap = { version = "2.14.0", features = ["std"] }
fastrand = "2.4.1"
mimalloc = "0.1.52"
